force-app/main/default/objects/Product__c/fields/BL_Applied_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>BL_Applied_Loan_Amount__c</fullName>
    <label>Applied Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>