force-app/main/default/objects/Product__c/fields/BL_Balance_Transfer_Applicable__c.field-meta.xml
<CustomField>
    <fullName>BL_Balance_Transfer_Applicable__c</fullName>
    <label>Balance Transfer Applicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>