force-app/main/default/objects/Product__c/fields/BL_EMI_First_Date__c.field-meta.xml
<CustomField>
    <fullName>BL_EMI_First_Date__c</fullName>
    <label>EMI First Date</label>
    <type>Date</type>
</CustomField>