force-app/main/default/objects/Product__c/fields/BL_Index_Rate__c.field-meta.xml
<CustomField>
    <fullName>BL_Index_Rate__c</fullName>
    <label>Index Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>