force-app/main/default/objects/Product__c/fields/BL_Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>BL_Interest_Type__c</fullName>
    <label>Interest Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Floating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>