force-app/main/default/objects/Product__c/fields/BL_IsRepaymentSchedule__c.field-meta.xml
<CustomField>
    <fullName>BL_IsRepaymentSchedule__c</fullName>
    <formula>IF(NOT(ISBLANK( BL_EMI_First_Date__c )), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isRepaymentSchedule</label>
    <type>Checkbox</type>
</CustomField>