force-app/main/default/objects/Product__c/fields/BL_Loan_Tenure_months__c.field-meta.xml
<CustomField>
    <fullName>BL_Loan_Tenure_months__c</fullName>
    <label>Loan Tenure(in months)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>