force-app/main/default/objects/Product__c/fields/BL_Moratorium_Period_Month__c.field-meta.xml
<CustomField>
    <fullName>BL_Moratorium_Period_Month__c</fullName>
    <label>Moratorium Period (Month)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>