force-app/main/default/objects/Product__c/fields/BL_Processing_Fee_Approval__c.field-meta.xml
<CustomField>
    <fullName>BL_Processing_Fee_Approval__c</fullName>
    <label>Processing Fee Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>