force-app/main/default/objects/Product__c/fields/BL_Processing_Fees__c.field-meta.xml
<CustomField>
    <fullName>BL_Processing_Fees__c</fullName>
    <label>Processing Fees Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>