force-app/main/default/objects/Product__c/fields/BL_Processing_Fees_Percent__c.field-meta.xml
<CustomField>
    <fullName>BL_Processing_Fees_Percent__c</fullName>
    <label>Processing Fees (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>