force-app/main/default/objects/Product__c/fields/BL_Rate_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>BL_Rate_of_Interest__c</fullName>
    <label>Rate of Interest(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>