force-app/main/default/objects/Product__c/fields/BL_RCU_Required__c.field-meta.xml
<CustomField>
    <fullName>BL_RCU_Required__c</fullName>
    <formula>Product__r.BL_RCU_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RCU Required</label>
    <type>Checkbox</type>
</CustomField>