force-app/main/default/objects/Product__c/fields/BL_ROI_Approval__c.field-meta.xml
<CustomField>
    <fullName>BL_ROI_Approval__c</fullName>
    <label>ROI Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>