force-app/main/default/objects/Product__c/fields/BL_Sanction_Loan_Amount_Approval__c.field-meta.xml
<CustomField>
    <fullName>BL_Sanction_Loan_Amount_Approval__c</fullName>
    <label>Sanction Loan Amount Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>