force-app/main/default/objects/Product__c/fields/BL_Spread__c.field-meta.xml
<CustomField>
    <fullName>BL_Spread__c</fullName>
    <label>Spread (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>