force-app/main/default/objects/Product__c/fields/BL_Sum_Assured_Approval__c.field-meta.xml
<CustomField>
    <fullName>BL_Sum_Assured_Approval__c</fullName>
    <label>Sum Assured Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>