force-app/main/default/objects/Product__c/fields/BL_Tenure_Approval__c.field-meta.xml
<CustomField>
    <fullName>BL_Tenure_Approval__c</fullName>
    <label>Tenure Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>