force-app/main/default/objects/Product__c/fields/BL_Waive_Insurance__c.field-meta.xml
<CustomField>
    <fullName>BL_Waive_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waive Insurance</label>
    <type>Checkbox</type>
</CustomField>