force-app/main/default/objects/Product__c/fields/BL_Waive_Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>BL_Waive_Processing_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waive Processing Fee</label>
    <type>Checkbox</type>
</CustomField>