force-app/main/default/objects/Product__c/fields/Number_Of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Vehicles__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>