force-app/main/default/objects/Product__c/fields/Processing_Fees_Amount_Approval__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fees_Amount_Approval__c</fullName>
    <label>Processing Fees Amount Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>