force-app/main/default/objects/Product__c/fields/Product_Schemes__c.field-meta.xml
<CustomField>
    <fullName>Product_Schemes__c</fullName>
    <formula>TEXT( Product__r.Product_Schemes__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Schemes</label>
    <type>Text</type>
</CustomField>