force-app/main/default/objects/Product__c/fields/Product_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Category__c</fullName>
    <formula>TEXT( Product__r.Product_Sub_Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Sub Category</label>
    <type>Text</type>
</CustomField>