force-app/main/default/objects/Product__c/fields/Product_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Product_Vertical__c</fullName>
    <label>Product Vertical</label>
    <length>100</length>
    <type>Text</type>
</CustomField>