force-app/main/default/objects/Product__c/fields/Sanction_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Loan_Amount__c</fullName>
    <label>Sanction Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>