force-app/main/default/objects/Product__c/validationRules/RestrictUserToUpdateName.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictUserToUpdateName</fullName>
    <active>true</active>
    <description>Restrict User To Update Name</description>
    <errorConditionFormula>AND(ISNEW() == false,  ISCHANGED(Name) )</errorConditionFormula>
    <errorMessage>You aren&apos;t allowed to update the name.</errorMessage>
</ValidationRule>